--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             <img id="qrCode" src="" alt="QR Code para compartilhar">
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
