commit de qr code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Meu Linktree</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -15,9 +16,7 @@
             <a href="https://www.outroexemplo.com" class="link" target="_blank">Link 2</a>
             <a href="https://www.maisumexemplo.com" class="link" target="_blank">Link 3</a>
         </div>
-        <div class="qr-code">
-            <img id="qrCode" src="" alt="QR Code para compartilhar">
-        </div>
+        <div id="qrCodeContainer" class="qr-code"></div>
     </div>
     <script src="main.js"></script>
 </body>
