--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="container">
         <h1>Links Úteis</h1>
         <div class="links-container">
-            <a href="https://www.exemplo.com" class="link" target="_blank">Link 1</a>
-            <a href="https://www.outroexemplo.com" class="link" target="_blank">Link 2</a>
-            <a href="https://www.maisumexemplo.com" class="link" target="_blank">Link 3</a>
+            <a href="https://github.com/paiferana/StartupLuna" class="link" target="_blank">Landing Page</a>
+            <a href="https://github.com/kessyads/LunaApplication" class="link" target="_blank">Repositório Principal</a>
+            <a href="https://www.figma.com/design/k4uHP6rvDBDuAhYLxpmr45/LUNA?node-id=0-1&node-type=canvas&t=TKWretBvPfhOrx9q-0" class="link" target="_blank">Figma</a>
+            <a href="https://trello.com/b/yVNdQmJK/startupone-innovatrix" class="link" target="_blank">Trello</a>
         </div>
         <div id="qrCodeContainer" class="qr-code"></div>
     </div>
